# libcimbar

./: .gitignore  CMakeLists.txt  CMakePresets.json  SECURITY.md  osv-scanner-custom.json  osv-scanner.toml  vcpkg.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: security-codeql.yml  security-dependencies.yml  security-sanitizers.yml  security-static-analysis.yml
cmake/: TestHardenedTransportVerifierRejects.cmake  VerifyHardenedTransportArtifact.cmake
docs/security/: ATTACK_SURFACE.md  AUDIT_PLAN.md  BACKLOG.md  BASELINE.md  DECISION_LOG.md  DEPENDENCY_INVENTORY.md  DESKTOP_RUNBOOK.md  FINDING_TEMPLATE.md  HARDENED_IPC.md  HARDENED_PROFILE.md  README.md  TEST_PLAN.md  THREAT_MODEL.md
docs/security/evidence/: 2026-07-21-ci-sanitizer-alignment.md  2026-07-21-clang-static-analysis.md  2026-07-21-cppcheck-first-party.md  2026-07-21-fountain-at-most-once.md  2026-07-21-fountain-packet-boundary.md  2026-07-21-hardened-transport-artifact.md  2026-07-21-image-transfer-hardening.md  2026-07-21-memory-sanitizer-hardened-transport.md  2026-07-21-opaque-fountain-session.md  2026-07-21-raw-frame-boundary.md  2026-07-21-seeded-fountain-fuzz-corpus.md  2026-07-21-thread-sanitizer-receiver.md  2026-07-21-windows-mingw-baseline.md  2026-07-21-wirehair-decoder-memory-budget.md  2026-07-22-codeql-cpp-production.md  2026-07-22-decoder-sandbox-prototype.md  2026-07-22-dependency-provenance-osv.md  2026-07-22-frame-sequence-fuzz.md  2026-07-22-raw-frame-cpu-budget.md  2026-07-22-raw-frame-geometry-fuzz.md  2026-07-23-hardened-ipc-parser.md
docs/security/sbom/: libcimbar.spdx.json
fuzz/: CMakeLists.txt  README.md  fuzz_fountain_metadata.cpp  fuzz_fountain_state.cpp  fuzz_frame_sequence.cpp  fuzz_hardened_ipc.cpp  fuzz_raw_frame.cpp
fuzz/corpus/: generate.py  manifest.json
scripts/: check-clang-sarif.py  check-codeql-sarif.py  check-dependency-lock.py  generate-sbom.ps1  setup-windows-vcpkg.ps1
src/exe/cimbar/: cimbar.cpp
src/exe/cimbar_extract/: CMakeLists.txt
src/exe/cimbar_recv/: recv.cpp
src/lib/cimb_translator/: Cell.h  CellDrift.h  Common.cpp  Common.h  FloodDecodePositions.cpp
src/lib/cimb_translator/test/: CMakeLists.txt  CellTest.cpp  CommonTest.cpp
src/lib/cimbar_js/: CMakeLists.txt  cimbar_recv_js.cpp  cimbar_recv_js.h
src/lib/cimbar_js/test/: CMakeLists.txt  cimbar_recv_jsTest.cpp  raw_frame_cpu_budget.cpp
src/lib/compression/test/: zstd_decompressorTest.cpp
src/lib/encoder/: DecoderPlus.h  escrow_buffer_writer.h
src/lib/encoder/test/: DecoderTest.cpp  EncoderRoundTripTest.cpp  escrow_buffer_writerTest.cpp
src/lib/extractor/: Deskewer.h  DeskewerPlus.h  ExtractorPlus.h  Geometry.h  Scanner.cpp  Scanner.h
src/lib/extractor/test/: CMakeLists.txt  DeskewerTest.cpp  ExtractorTest.cpp  ScannerTest.cpp
src/lib/fountain/: CMakeLists.txt  FountainDecoder.h  FountainDecoderLimits.h  FountainEncoder.h  FountainInit.h  FountainMetadata.h  concurrent_fountain_decoder_sink.h  fountain_decoder_file_sink.h  fountain_decoder_session.h  fountain_decoder_sink.h  fountain_decoder_stream.h
src/lib/fountain/test/: CMakeLists.txt  FountainEncodingTest.cpp  FountainInitConcurrencyPeer.cpp  FountainInitConcurrencyTest.cpp  FountainMetadataTest.cpp  concurrent_fountain_decoder_sinkTest.cpp  fountain_sinkSpecialTest.cpp  fountain_sinkTest.cpp
src/lib/gui/: gl_2d_display.h
src/lib/util/: File.h
src/profile/hardened_transport/: CMakeLists.txt  HardenedFountainTransport.cpp  HardenedFountainTransport.h  HardenedTransportIpc.cpp  HardenedTransportIpc.h
src/profile/hardened_transport/test/: HardenedFountainTransportTest.cpp  LinuxSandboxProbe.cpp
src/third_party_lib/libcorrect/: CMakeLists.txt
src/third_party_lib/stb/: stb_image.h
src/third_party_lib/wirehair/: WirehairCodec.cpp  WirehairCodec.h  gf256.cpp  wirehair.cpp
src/third_party_lib/wirehair/include/wirehair/: wirehair.h
web/: recv-worker.js  recv.js
